overflow issues solved

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,10 @@ body {
   scroll-behavior: smooth;
 }
 
+body,html{
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
